test/pass/require_depended.sest
module RequireDepended = struct

  let hello() =
    "Hello"

end
