test/fail/error_recursive_type_parameter2.sest
module ErrorRecursiveTypeParameter2 = struct

  let f(x, y) = ({ x | foo = y }, { y | bar = x })

end
